--- a/config/rmod.ini
+++ b/config/rmod.ini
@@ -59,7 +59,7 @@
 ;
 ;---------------------------------------------------------------------------------------------------
 [loader]
-path        = D:\Games\Steam\SteamApps\common\KOAReckoning\Reckoning.exe
+path        = C:\Program Files (x86)\Steam\steamapps\common\KOAReckoning\Reckoning.exe
 steam       = 1
 steamappid  = 102500
 
